--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   
 </head>
 <body>
+    <!-- Sidebar Toggle Button -->
+<button class="sidebar-toggle"><i class="fas fa-bars"></i></button>
     <div class="container">
         <!-- Sidebar -->
         <div class="sidebar">
